fixed overlapping bullets
set list-style-position to inside.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ p{font-family: Georgia,serif;
   text-align: left;
 }
 ul{list-style-type:circle;
+  list-style-position: inside;
 }
 a:visited{ color: purple;
 }
@@ -23,8 +24,10 @@ img{margin-left: auto;
 .One{
   float: left;
   width: auto;
+  margin: auto;
 }
 .Two{
   float: right;
   width: auto;
+  margin-left: 3px;
 }
